tests/test_files/error_type_mismatch.stderr
error: mismatched types (uint vs bool)
- error_type_mismatch:2:2
2 |   y
  |   ^
